Add store section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -77,3 +77,29 @@ div {
   background-color: black;
   width: 100%;
 }
+
+/* Store */
+
+#store {
+  height: 700px;
+  width: 1000px;
+  padding-top: 70px;
+  margin: auto;
+}
+
+.item {
+  padding: 5px;
+}
+
+.item img {
+  height: 200px;
+  display: block;
+  margin: 0px;
+}
+
+.item span {
+  display: block;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+}
