--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -103,3 +103,30 @@ div {
   text-align: center;
   padding: 5px;
 }
+
+/* Locations */
+
+#locations {
+  background-image: url(../images/img-locations-background.jpg);
+  height: 500px;
+  padding-top: 70px;
+}
+
+#locations .flex-container {
+  width: 1100px;
+  margin: auto;
+}
+
+.flex-container.locations {
+  padding-top: 5px;
+}
+
+.location {
+  opacity: 1;
+  background-color: black;
+  flex-basis: 280px;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  margin: 5px 20px;
+}
